--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,4 @@ build-backend = "poetry.core.masonry.api"
 brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.scripts.brain_even:main"
 brain-gcd = "brain_games.scripts.brain_gcd:main"
+brain-progression  = "brain_games.scripts.brain_progression:main"
