--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [tool.poetry]
 name = "hexlet-code"
 version = "0.1.0"
-description = ""
+description = "A set of five console games "
 authors = ["Yulia <jilly-2005@yandex.ru>"]
 packages = [
   { include = "brain_games" },
 ]
+repository = "https://github.com/YuliaPie/python-project-49.git"
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -24,3 +25,4 @@ brain-even = "brain_games.scripts.brain_even:main"
 brain-gcd = "brain_games.scripts.brain_gcd:main"
 brain-progression  = "brain_games.scripts.brain_progression:main"
 brain-prime  = "brain_games.scripts.brain_prime:main"
+brain-calc  = "brain_games.scripts.brain_calc:main"
